- Fix to overflow

--- a/Hospital/Content/Site.css
+++ b/Hospital/Content/Site.css
@@ -42,3 +42,8 @@ div#intro {
     display: block;
     margin: auto;
 }
+
+div.table-container {
+    height: 550px;
+    overflow-y: auto;
+}
